--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
 		<kotlin.version>1.9.24</kotlin.version>
 	</properties>
 	<dependencies>
+		<!-- For Maven -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.2.1</version> <!-- Or the latest version -->
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
